<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fast_pass"
            android:checked="true"
            android:icon="@drawable/ic_local_activity_black_48dp"
            android:title="@string/fast_pass"/>
        <item
            android:id="@+id/irc"
            android:checked="true"
            android:icon="@drawable/ic_question_answer_black_48dp"
            android:title="@string/irclog"/>
        <item
            android:id="@+id/schedule"
            android:checked="true"
            android:icon="@drawable/ic_event_note_black_48dp"
            android:title="@string/schedule"/>
        <item
            android:id="@+id/sponsors"
            android:checked="true"
            android:icon="@drawable/ic_redeem_black_48dp"
            android:title="@string/sponsors"/>
        <item
            android:id="@+id/staffs"
            android:checked="true"
            android:icon="@drawable/ic_group_black_48dp"
            android:title="@string/staffs"/>
    </group>
</menu>
