<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.MethodSelectionFragment">

    <TextView
        style="@style/TextAppearance.OPass.AuthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:text="@string/verify_your_identity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/select_a_verification_method"
        android:textAppearance="?attr/textAppearanceSubtitle1" />


    <LinearLayout
        android:id="@+id/from_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.54"
            android:src="@drawable/ic_camera_alt_black_24dp"
            android:tint="?attr/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:text="@string/scan_qr_code_from_camera"
            android:textAppearance="@style/TextAppearance.OPass.AuthListItem" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/from_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.54"
            android:src="@drawable/ic_photo_library_black_24dp"
            android:tint="?attr/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:text="@string/scan_qr_code_from_gallery"
            android:textAppearance="@style/TextAppearance.OPass.AuthListItem" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enter_token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="32dp"
            android:alpha="0.54"
            android:src="@drawable/ic_confirmation_number_black_24dp"
            android:tint="?attr/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:text="@string/enter_token_manually"
            android:textAppearance="@style/TextAppearance.OPass.AuthListItem" />
    </LinearLayout>
</LinearLayout>
