<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/not_conf_wifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/fp_empty" />

        <TextView
            android:id="@+id/not_conf_wifi_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/connect_to_conference_wifi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/not_conf_wifi_msg"
            android:layout_centerHorizontal="true"
            android:text="@string/tap_to_retry" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_network"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/no_network_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/no_network" />

        <TextView
            android:id="@+id/no_network_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_network_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/offline"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_network_msg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/tap_to_retry"
            android:textAllCaps="true"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp" />
    </RelativeLayout>

    <include layout="@layout/include_login" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scenarios"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>
