<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.SessionDetailActivity"
    tools:showIn="@layout/activity_session_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Anistar Sung 宋志峰 / Howard Huang 黃元亨"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yahoo Mobile SDK Open Source Projects and Experience Sharing"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="New Text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/type"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="New Text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/community_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/community"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/community"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="New Text" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lang"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/lang"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="New Text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/slide_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/slide"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/slide"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/link" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/slido_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/slido"
                            android:textColor="@color/colorPrimary" />

                        <TextView
                            android:id="@+id/slido"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="New Text" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/speaker_info_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speaker_info"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/speakerinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin"
            android:layout_marginRight="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/program_abstract"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/program_abstract"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
